--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,17 +8,18 @@
     <string name="required_email">Please insert e-mail</string>
     <string name="required_password">Please insert password</string>
     <string name="invalid_credentials">Invalid E-mail/Password</string>
+    <string name="error_sign_in">Error to sign in, try again</string>
     <string name="invalid_user">Invalid user</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="google_failed">Google sign in failed</string>
     <string name="facebook_failed">Facebook sign in failed</string>
-    <string name="signin_google">Sign in with Google</string>
-    <string name="signin_facebook">Sign in with Facebook</string>
+    <string name="sign_in_google">Sign in with Google</string>
+    <string name="sign_in_facebook">Sign in with Facebook</string>
     <string name="new_account">Doesn\'t have an account?</string>
-    <string name="signup"><u>Sign up</u></string>
+    <string name="sign_up"><u>Sign up</u></string>
     <string name="or">-- OR --</string>
-    <string name="signin">Sign in</string>
-    <string name="bt_signin">Sign in</string>
+    <string name="sign_in">Sign in</string>
+    <string name="bt_sign_in">Sign in</string>
     <string name="close">Close</string>
     <string name="continue_as">Continue as </string>
     <string name="guest">Guest</string>
